--- a/src/custom_styles.scss
+++ b/src/custom_styles.scss
@@ -1,3 +1,15 @@
+.clr-red {
+    color: red !important;
+}
+
+.clr-blue {
+    color: blue !important;
+}
+
+.error-text {
+    color: red;
+}
+
 .pills>.nav>li>a:hover {
     color: #fff !important;
     background: #70818a !important;
