--- a/src/app/pages/super-admin/rcm-accounts/rcm-accounts.component.scss
+++ b/src/app/pages/super-admin/rcm-accounts/rcm-accounts.component.scss
@@ -4,13 +4,14 @@
   right: 40px;
   background-color: #e6e6e6 !important;
 }
+
 ::ng-deep .mat-menu-panel {
-  max-height: 250px !important; 
+  max-height: 250px !important;
 }
 
 ::ng-deep .scrollable-menu {
-  max-height: 200px; 
-  overflow-y: auto; 
+  max-height: 200px;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
 }
@@ -67,15 +68,15 @@
 
 @media (max-width: 768px) {
   .arrow-shape {
-      width: calc(50% - 15px);
-      /* Fit two items in a row for smaller screens */
+    width: calc(50% - 15px);
+    /* Fit two items in a row for smaller screens */
   }
 }
 
 @media (max-width: 480px) {
   .arrow-shape {
-      width: 100%;
-      /* Full width for very small screens */
+    width: 100%;
+    /* Full width for very small screens */
   }
 }
 
@@ -87,4 +88,16 @@
   gap: 15px;
   padding: 15px;
   overflow-x: auto;
+}
+
+.center-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5em 1em;
+}
+
+.center-icon mat-icon {
+  vertical-align: middle;
+  margin: 0;
 }
