--- a/src/app/pages/rcm-login/entities/law-firm/law-firm.component.html
+++ b/src/app/pages/rcm-login/entities/law-firm/law-firm.component.html
@@ -468,7 +468,7 @@
 
                         <button mat-raised-button matTooltip="Download CSV" class="pull-right center-icon"
                             style="background-color: #50636d !important;color: white;margin-right: 8px;">
-                            <mat-icon class="mt-2">get_app</mat-icon>
+                            <i class="fa-solid fa-file-csv fa-lg" style="font-size: 20px; margin-right: 5px;"></i>
                         </button>
 
                         <button mat-raised-button matTooltip="Upload CSV" class="pull-right center-icon"
@@ -518,7 +518,7 @@
                             </div>
                         </mat-menu>
 
-                        <label class="control-label margin-right-10">Apply Save Search :</label>
+                        <label class="control-label margin-right-10">Apply Saved Search :</label>
                         <mat-select class="form-control margin-right-10" style="width: 200px;"
                             placeholder="Select Subject">
                             <mat-option [value]="'New York'">Pending Verification</mat-option>
