--- a/src/app/pages/rcm-login/rcm-setup/providers/providers.component.html
+++ b/src/app/pages/rcm-login/rcm-setup/providers/providers.component.html
@@ -489,7 +489,7 @@
                             </div>
                         </mat-menu>
 
-                        <label class="control-label margin-right-10">Apply Save Search :</label>
+                        <label class="control-label margin-right-10">Apply Saved Search :</label>
                         <mat-select class="form-control margin-right-10" style="width: 200px;"
                             placeholder="Select Subject">
                             <mat-option [value]="'New York'">Pending Verification</mat-option>
