--- a/src/app/pages/rcm-login/refferral-dashboard/referral-radar/referral-radar.component.html
+++ b/src/app/pages/rcm-login/refferral-dashboard/referral-radar/referral-radar.component.html
@@ -58,7 +58,7 @@
     </table>
 </div>
 
-<div>
+<div class="row">
     <button class="tab-button margin-right-10" [class.active]="selectedTab === 'overview'"
         (click)="selectTab('overview')">Overview
     </button>
