--- a/src/app/pages/rcm-login/rcm-payments/rcm-payments.component.html
+++ b/src/app/pages/rcm-login/rcm-payments/rcm-payments.component.html
@@ -608,7 +608,7 @@
     <div class="w-100 mt-4">
         <div class="row" style="display: flex; justify-content: flex-end; align-items: center; margin-right: -7px;">
 
-            <label class="control-label mt-2 margin-right-10">Apply Save Search :</label>
+            <label class="control-label mt-2 margin-right-10">Apply Saved Search :</label>
             <mat-select class="form-control margin-right-10" style="width: 180px;" placeholder="Select Subject">
                 <mat-option [value]="'New York'">Pending Verification</mat-option>
                 <mat-option [value]="'Los Angeles'">SCH & Pending AUTH</mat-option>
