--- a/src/app/pages/rcm-login/rcm-setup/tag-master/tag-master.component.html
+++ b/src/app/pages/rcm-login/rcm-setup/tag-master/tag-master.component.html
@@ -138,7 +138,7 @@
                                 <td class="text-center">
                                     <button  mat-raised-button type="button"
                                     class="mb-1" 
-                                    [ngStyle]="{'background-color': item.Appearence === 'Emergency' ? 'red' : item.Appearence === 'Expedite' ? 'green' : (item.Appearence === 'Delayed' ? 'yellow' : ''), 
+                                    [ngStyle]="{'background-color': item.Appearence === 'Emergency' ? 'red' : item.Appearence === 'Expedite' ? 'green' : (item.Appearence === 'Delayed' ? 'black' : ''), 
                                                 'color': 'white',
                                                 'width': '70%'}">
                                     {{ item.Appearence }}
