--- a/src/app/pages/super-admin/admin-payments/transcations/transcations.component.scss
+++ b/src/app/pages/super-admin/admin-payments/transcations/transcations.component.scss
@@ -8,3 +8,17 @@
     display: flex;
     flex-direction: column;
   }
+
+
+
+  .center-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5em 1em;
+  }
+  
+  .center-icon mat-icon {
+    vertical-align: middle;
+    margin: 0;
+  }
