--- a/src/app/pages/super-admin/admin-provider/admin-provider.component.scss
+++ b/src/app/pages/super-admin/admin-provider/admin-provider.component.scss
@@ -124,3 +124,16 @@
   padding: 15px;
   overflow-x: auto;
 }
+
+
+.center-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5em 1em;
+}
+
+.center-icon mat-icon {
+  vertical-align: middle;
+  margin: 0;
+}
